# mitza

./: CMakeLists.txt  README  config.cpp  config.h  database.cpp  database.h  glb.cpp  glb.h  htpargs.cpp  htpargs.h  install.sh  main.cpp  main.h  mimes.cpp  mimes.h  mitza.cbp  mitza.depend  mitza.dia  mitza.layout  mitza.prj  readme.md  site.cpp  site.h  strops.cpp  strops.h  thr.cpp  thr.h  todo.txt  wcurl.cpp  wcurl.h  webpage.cpp  webpage.h
include/: consts.h  matypes.h  modiface.h  os.h  strutils.h
var-www-mitza/: config.inc.php  counter.class.php  daily8888.txt  index.html  index.php  sites.txt
var-www-mitza/include/: @config.php  ads.php  ajaxtooltip.js  ex.php  mitza  progress.php  smap.php  stil.css  swcount.php
var-www-mitza/include/tttmp/: enjoydecorcom.dot
